Add new hooks and examples for battery status, geolocation, idle timeout, network speed, swipe detection, text selection, timeout, timeout toggle, and update effect
- Implemented `useBatteryStatus` hook with documentation and demo.
- Implemented `useGeoLocation` hook with documentation and demo.
- Implemented `useIdleTimeout` hook with documentation and demo.
- Implemented `useNetworkSpeed` hook with documentation and demo.
- Implemented `useSwipe` hook with documentation and demo.
- Implemented `useTextSelection` hook with documentation and demo.
- Implemented `useTimeout` hook with documentation and demo.
- Implemented `useTimeoutToggle` hook with documentation and demo.
- Implemented `useToggle` hook with documentation and demo.
- Implemented `useUpdateEffect` hook with documentation and demo.
- Implemented `useWhyDidYouUpdate` hook with documentation and demo.
- Updated `useWindowResize` example for better styling.
- Updated package dependencies to use reactuals version 1.1.2.
- Enhanced button styles in custom CSS for better UI experience.

--- a/docs/Hooks/useWindowResize.mdx
+++ b/docs/Hooks/useWindowResize.mdx
@@ -1,6 +1,6 @@
 # useWindowResize()
 
-The `useWindowResize` hook listens for window resize events and executes a provided handler function whenever the window is resized, making it easy to respond to viewport changes.
+- The `useWindowResize` hook listens for window resize events and executes a provided handler function whenever the window is resized, making it easy to respond to viewport changes.
 
 ### Import
 
